force-app/main/default/objects/Asset/fields/GeoBatteryLevel__c.field-meta.xml
<CustomField>
    <fullName>GeoBatteryLevel__c</fullName>
    <label>Geo Battery Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>