force-app/main/default/objects/Asset/fields/GeoFirstSoftVersion__c.field-meta.xml
<CustomField>
    <fullName>GeoFirstSoftVersion__c</fullName>
    <label>GeoFirstSoftVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>