force-app/main/default/objects/Asset/fields/GeoHardwareVersion__c.field-meta.xml
<CustomField>
    <fullName>GeoHardwareVersion__c</fullName>
    <label>GeoHardwareVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>