force-app/main/default/objects/Asset/fields/GeoLastCoordinates__c.field-meta.xml
<CustomField>
    <fullName>GeoLastCoordinates__c</fullName>
    <label>Geo Last Coordinates</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>