force-app/main/default/objects/Asset/fields/GeoLastPoICode__c.field-meta.xml
<CustomField>
    <fullName>GeoLastPoICode__c</fullName>
    <label>Geo Last PoI Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>