force-app/main/default/objects/Asset/fields/GeoLastPoIName__c.field-meta.xml
<CustomField>
    <fullName>GeoLastPoIName__c</fullName>
    <label>Geo Last PoI Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>