force-app/main/default/objects/Asset/fields/GeoLastPoIType__c.field-meta.xml
<CustomField>
    <fullName>GeoLastPoIType__c</fullName>
    <label>Geo Last PoI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>