force-app/main/default/objects/Asset/fields/GeoLastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>GeoLastUpdateDate__c</fullName>
    <label>Geo Last Update Date</label>
    <type>DateTime</type>
</CustomField>