force-app/main/default/objects/Asset/fields/GeoQRCode__c.field-meta.xml
<CustomField>
    <fullName>GeoQRCode__c</fullName>
    <label>GeoQRCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>