force-app/main/default/objects/Asset/fields/GeoRadiusm__c.field-meta.xml
<CustomField>
    <fullName>GeoRadiusm__c</fullName>
    <label>Geo Radius (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>