force-app/main/default/objects/Asset/fields/IoTAccessKey__c.field-meta.xml
<CustomField>
    <fullName>IoTAccessKey__c</fullName>
    <label>IoTAccessKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>