force-app/main/default/objects/Asset/fields/LugAggreg__c.field-meta.xml
<CustomField>
    <fullName>LugAggreg__c</fullName>
    <label>Lug Aggreg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>