force-app/main/default/objects/Asset/fields/LugAggreg_Desc__c.field-meta.xml
<CustomField>
    <fullName>LugAggreg_Desc__c</fullName>
    <label>Lug Aggreg Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>