force-app/main/default/objects/Asset/fields/LugAggregDate__c.field-meta.xml
<CustomField>
    <fullName>LugAggregDate__c</fullName>
    <label>Lug Aggreg Date</label>
    <type>Date</type>
</CustomField>