force-app/main/default/objects/Asset/fields/LugBatch__c.field-meta.xml
<CustomField>
    <fullName>LugBatch__c</fullName>
    <label>Lug Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>