force-app/main/default/objects/Asset/fields/LugMadeIN__c.field-meta.xml
<CustomField>
    <fullName>LugMadeIN__c</fullName>
    <label>Lug Made IN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>