force-app/main/default/objects/Asset/fields/LugSerialTT__c.field-meta.xml
<CustomField>
    <fullName>LugSerialTT__c</fullName>
    <label>Lug SerialTT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>