force-app/main/default/objects/Asset/fields/SKUdesc__c.field-meta.xml
<CustomField>
    <fullName>SKUdesc__c</fullName>
    <label>SKUdesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>