force-app/main/default/objects/Asset/fields/TravelCode__c.field-meta.xml
<CustomField>
    <fullName>TravelCode__c</fullName>
    <label>Travel Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>