force-app/main/default/objects/Asset/fields/TravelDate__c.field-meta.xml
<CustomField>
    <fullName>TravelDate__c</fullName>
    <label>Travel Date</label>
    <type>Date</type>
</CustomField>