force-app/main/default/objects/Asset/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <label>Update Date</label>
    <type>DateTime</type>
</CustomField>