force-app/main/default/objects/Asset/fields/WatchPublicKey__c.field-meta.xml
<CustomField>
    <fullName>WatchPublicKey__c</fullName>
    <description>stocker  informations de sécurité liée au pairing de la montre Tambour Horizon avec un user</description>
    <label>Watch Public Key</label>
    <type>TextArea</type>
</CustomField>