force-app/main/default/objects/Asset/fields/WatchVersion__c.field-meta.xml
<CustomField>
    <fullName>WatchVersion__c</fullName>
    <description>stocker la version du logiciel de la montre (pour permettre d’informer LV Pass d’une éventuelle nécessité d’update la montre)</description>
    <label>Watch Version</label>
    <type>TextArea</type>
</CustomField>