force-app/main/default/objects/Asset/fields/Wifi_MAC_Code__c.field-meta.xml
<CustomField>
    <fullName>Wifi_MAC_Code__c</fullName>
    <label>Wifi MAC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>