force-app/main/default/objects/Asset/fields/Yubikey__c.field-meta.xml
<CustomField>
    <fullName>Yubikey__c</fullName>
    <label>Yubikey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>